<resources>

    <string name="app_name">iUPB</string>
    <string name="title_activity_main">iUPB</string>
    <string name="actionbar_restaurants_label">Speisepläne</string>
    <string name="actionbar_restaurants_url">restaurants</string>
    <string name="actionbar_transportation_label">Bus-Zeiten</string>
    <string name="actionbar_transportation_url">transportation</string>
    <string name="iupb_base_url">www.i-upb.de</string>
    <string name="progressbar_pleasewait">Bitte warten&#8230;</string>
    <string name="actionbar_paul_label">PAUL</string>
    <string name="actionbar_paul_url">courses</string>
    <string name="actionbar_weather_label">Wetter</string>
    <string name="actionbar_weather_url">weather</string>
    <string name="actionbar_twitter_label">Twitter</string>
    <string name="actionbar_twitter_url">twitter</string>
    <string name="actionbar_parties_label">Partys</string>
    <string name="actionbar_parties_url">events</string>
    <string name="actionbar_asta_label">AStA News</string>
    <string name="actionbar_asta_url">asta</string>
    <string name="actionbar_posts_label">Pinnwand</string>
    <string name="actionbar_posts_url">posts</string>
    <string name="actionbar_navigator_label">Navigator</string>
    <string name="actionbar_navigator_url">pages/navigator</string>
    <string name="actionbar_pingo_label">PINGO</string>
    <string name="actionbar_pingo_url">pages/pingo</string>
    <string name="actionbar_timetable_label">Stundenplan</string>
    <string name="actionbar_timetable_url">timetable</string>
    <string name="actionbar_home_label">Home</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_restaurant">RestaurantActivity</string>
    <string name="app_tag">iupb</string>
	<string name="widget_name">iUPB Widget</string>
</resources>